--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -28,7 +28,7 @@
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
-                    <input type="text" id="price" class="form-control" placeholder="29.99" aria-label="price" aria-describedby="price-label" required>
+                    <input type="text" id="price" class="form-control" placeholder="29.99" name="campground[price]" aria-label="price" aria-describedby="price-label" required>
                     <div class="valid-feedback">
                         <p>Looks good!</p>
                     </div>
