--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6">
         <div class="card mb-3">
             <img src="<%= campground.image %>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -21,6 +21,8 @@
                 <a href="/campgrounds">ALL CAMPGROUNDS</a>
             </div>
         </div>
+    </div>
+    <div class="col-6">
         <h2>Leave a Review!</h2>
         <form class="mb-3 validated-form" action="/campgrounds/<%= campground._id %>/reviews" method="POST" novalidate>
             <div class="mb-3">
@@ -34,7 +36,18 @@
                     Looks good!
                 </div>
             </div>
-            <button class="btn btn-success">Add Review</button>
+            <button class="btn btn-success">Post</button>
         </form>
+        <% for( let review of campground.reviews) { %>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Rating: <%= review.rating %></h5>
+                    <p class="card-text"><%= review.body %></p>
+                    <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-sm btn-danger">Delete</button>
+                    </form>
+                </div>
+            </div>
+        <% } %>
     </div>
 </div>
