--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,17 +4,31 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
         <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link active" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/campgrounds">Campgrounds</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/campgrounds/new">New Campground</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/campgrounds">Campgrounds</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/campgrounds/new">New Campground</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <% if (!current_user) { %>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/register">Register</a>
+                </li>
+            <% } else {%>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/logout">Logout</a>
+                </li>
+            <% } %>
         </ul>
     </div>
     </div>
