--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -18,10 +18,6 @@
                 </div>            
             </div>
             <div class="mb-3">
-                <label class="form-label" for="image">Add Images</label>
-                <input type="file" name="image" id="image" multiple>        
-            </div>
-            <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
@@ -37,7 +33,11 @@
                 <div class="valid-feedback">
                     <p>Looks good!</p>
                 </div>        
-            </div>     
+            </div> 
+            <div class="mb-3">
+                <label for="image" class="form-label">Add More Images</label>
+                <input class="form-control" type="file" id="image" name="image" multiple>
+            </div>        
             <div class="mb-3">
                 <button class="btn btn-info">Save Changes</button>
             </div>
