--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -17,14 +17,6 @@
                     <p>Looks good!</p>
                 </div>
             </div>
-            <input type="file" name="image" id="" multiple>
-            <!-- <div class="mb-3">
-                <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" id="image" name="campground[image]" required>
-                <div class="valid-feedback">
-                    <p>Looks good!</p>
-                </div>
-            </div> -->
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
@@ -41,6 +33,10 @@
                 <div class="valid-feedback">
                     <p>Looks good!</p>
                 </div>
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Upload Images</label>
+                <input class="form-control" type="file" id="image" name="image" multiple>
             </div>     
             <div class="mb-3">
                 <button class="btn btn-success">Add Campground</button>
