--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -39,6 +39,15 @@
                 <input class="form-control" type="file" id="image" name="image" multiple>
             </div>        
             <div class="mb-3">
+                <% campground.images.forEach((img, i) => { %>
+                    <img class="img-thumbnail" src="<%= img.url %>" alt="">
+                    <div class="form-check-inline">
+                        <input type="checkbox" id="image-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                    </div>
+                    <label for="image-<%= i %>">Delete?</label>
+                <% }) %>
+            </div>  
+            <div class="mb-3">
                 <button class="btn btn-info">Save Changes</button>
             </div>
         </form>
