--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -39,13 +39,22 @@
                 <input class="form-control" type="file" id="image" name="image" multiple>
             </div>        
             <div class="mb-3">
-                <% campground.images.forEach((img, i) => { %>
-                    <img class="img-thumbnail" src="<%= img.url %>" alt="">
-                    <div class="form-check-inline">
-                        <input type="checkbox" id="image-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                <label class="form-label" for="description">Delete Images</label>
+                <div class="row row-cols-1 row-cols-md-4 g-4 mb-3">
+                    <% campground.images.forEach((image, i) => { %>
+                    <div class="col">
+                        <div class="card">
+                            <label for="image-<%= i %>">
+                                <img class="card-img" src="<%= image.thumbnail %>" alt="">
+                                <div class="card-img-overlay text-end pt-1 pe-2">
+                                    <input class="form-check-input" type="checkbox" name="deleteImages[]"
+                                        value="<%= image.filename %>" id="image-<%= i %>">
+                                </div>
+                            </label>
+                        </div>
                     </div>
-                    <label for="image-<%= i %>">Delete?</label>
-                <% }) %>
+                    <% }) %>
+                </div>
             </div>  
             <div class="mb-3">
                 <button class="btn btn-info">Save Changes</button>
