--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,19 +4,19 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
-        <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                <a class="nav-link" href="/campgrounds">View Campgrounds</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/campgrounds/new">New Campground</a>
+                <a class="nav-link" href="/campgrounds/new">Add Campground</a>
             </li>
         </ul>
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ms-auto">
             <% if (!current_user) { %>
                 <li class="nav-item">
                     <a class="nav-link active" href="/login">Login</a>
