--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,6 +4,7 @@
 <div class="row">
     <div class="col-6">
         <div class="card mb-3">
+            <div id='map' style='width: 400px; height: 300px;'></div>
             <div id="campgroundCarousel" class="carousel slide">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i) => { %>
@@ -95,3 +96,10 @@
         <% } %>
     </div>
 </div>
+
+<script>
+    const mapBoxToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campground = '<%- JSON.stringify(campground) %>';
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
