--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,8 @@
 <% layout('layouts/boilerplate') %>
+<div id="map" style="width: 100%; height: 500px">
+
+
+</div>
 <h1>All Campgrounds</h1>
 <div>
     <a href="/campgrounds/new">ADD NEW CAMPGROUND</a>
@@ -26,3 +30,10 @@
         </div>
     </div>
 <% } %>
+
+<script>
+    const mapBoxToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campgrounds = { features: JSON.parse('<%- JSON.stringify(campgrounds) %>')};
+</script>
+
+<script src="/javascripts/clusterMap.js"></script>
