--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -33,7 +33,7 @@
 
 <script>
     const mapBoxToken = '<%- process.env.MAPBOX_TOKEN %>';
-    const campgrounds = { features: JSON.parse('<%- JSON.stringify(campgrounds) %>')};
+    const campgrounds = { features: JSON.parse(`<%- JSON.stringify(campgrounds) %>`)};
 </script>
 
 <script src="/javascripts/clusterMap.js"></script>
