--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,7 +22,7 @@
                     <a class="nav-link active" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/register">Register</a>
+                    <a class="nav-link active" href="/register">Sign Up</a>
                 </li>
             <% } else {%>
                 <li class="nav-item">
