--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,19 +1,36 @@
 <% layout('layouts/boilerplate') %>
-<h1>Login</h1>
-<form action="/login" class="validated-form" novalidate method="POST">
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input class="form-control" type="text" id="username" name="username" required>
-        <div class="valid-feedback">
-            <p>Looks good!</p>
+<div class="container d-flex justify-content-center align-items-center mt-5 mb-5">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card shadow">
+                <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+                    alt="" class="card-img-top" />
+                <div class="card-body">
+                    <h1>Login</h1>
+                    <form action="/login" class="validated-form" novalidate method="POST">
+                        <div class="mb-3">
+                            <label class="form-label" for="username">Username</label>
+                            <input class="form-control" type="text" id="username" name="username" required>
+                            <div class="valid-feedback">
+                                <p>Looks good!</p>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="password">Password</label>
+                            <input class="form-control" type="password" id="password" name="password" required>
+                            <div class="valid-feedback">
+                                <p>Looks good!</p>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <button class="btn btn-success w-100" style="height: 3rem;">Login</button>
+                        </div>
+                        <span>
+                            Don't have an account? <a href="/register">Sign Up</a>
+                        </span>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input class="form-control" type="password" id="password" name="password" required>
-        <div class="valid-feedback">
-            <p>Looks good!</p>
-        </div>
-    </div>
-    <button class="btn btn-success">Login</button>
-</form>
+</div>
