--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,65 +1,71 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-    <h1 class="text-center">Edit Campground</h1>
-    <div class="col-6 offset-3">
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
-            <div class="mb-3">
-                <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title %>" required>
-                <div class="valid-feedback">
-                    <p>Looks good!</p>
-                </div>            
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>" required>
-                <div class="valid-feedback">
-                    <p>Looks good!</p>
-                </div>            
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="price">Campground Price</label>
-                <div class="input-group">
-                    <span class="input-group-text" id="price-label">$</span>
-                    <input type="text" id="price" class="form-control" placeholder="29.99" name="campground[price]" aria-label="price" aria-describedby="price-label" value="<%= campground.price %>" required>
-                    <div class="valid-feedback">
-                        <p>Looks good!</p>
-                    </div>                
-                </div>  
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground.description %></textarea>
-                <div class="valid-feedback">
-                    <p>Looks good!</p>
-                </div>        
-            </div> 
-            <div class="mb-3">
-                <label for="image" class="form-label">Add More Images</label>
-                <input class="form-control" type="file" id="image" name="image" multiple>
-            </div>        
-            <div class="mb-3">
-                <label class="form-label" for="description">Delete Images</label>
-                <div class="row row-cols-1 row-cols-md-4 g-4 mb-3">
-                    <% campground.images.forEach((image, i) => { %>
-                    <div class="col">
-                        <div class="card">
-                            <label for="image-<%= i %>">
-                                <img class="card-img" src="<%= image.thumbnail %>" alt="">
-                                <div class="card-img-overlay text-end pt-1 pe-2">
-                                    <input class="form-check-input" type="checkbox" name="deleteImages[]"
-                                        value="<%= image.filename %>" id="image-<%= i %>">
-                                </div>
-                            </label>
+<div class="container d-flex justify-content-center align-items-center mt-5 mb-5">
+    <div class="row">
+        <h1 class="text-center">Edit Campground</h1>
+        <div class="col-md-6 offset-md-3">
+            <div class="card shadow">
+                <div class="card-body">
+                    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+                        <div class="mb-3">
+                            <label class="form-label" for="title">Title</label>
+                            <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title %>" required>
+                            <div class="valid-feedback">
+                                <p>Looks good!</p>
+                            </div>            
                         </div>
-                    </div>
-                    <% }) %>
+                        <div class="mb-3">
+                            <label class="form-label" for="location">Location</label>
+                            <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>" required>
+                            <div class="valid-feedback">
+                                <p>Looks good!</p>
+                            </div>            
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="price">Campground Price</label>
+                            <div class="input-group">
+                                <span class="input-group-text" id="price-label">$</span>
+                                <input type="text" id="price" class="form-control" placeholder="29.99" name="campground[price]" aria-label="price" aria-describedby="price-label" value="<%= campground.price %>" required>
+                                <div class="valid-feedback">
+                                    <p>Looks good!</p>
+                                </div>                
+                            </div>  
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="description">Description</label>
+                            <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground.description %></textarea>
+                            <div class="valid-feedback">
+                                <p>Looks good!</p>
+                            </div>        
+                        </div> 
+                        <div class="mb-3">
+                            <label for="image" class="form-label">Add More Images</label>
+                            <input class="form-control" type="file" id="image" name="image" multiple>
+                        </div>        
+                        <div class="mb-3">
+                            <label class="form-label" for="description">Delete Images</label>
+                            <div class="row row-cols-1 row-cols-md-4 g-4 mb-3">
+                                <% campground.images.forEach((image, i) => { %>
+                                <div class="col">
+                                    <div class="card">
+                                        <label for="image-<%= i %>">
+                                            <img class="card-img" src="<%= image.thumbnail %>" alt="">
+                                            <div class="card-img-overlay text-end pt-1 pe-2">
+                                                <input class="form-check-input" type="checkbox" name="deleteImages[]"
+                                                    value="<%= image.filename %>" id="image-<%= i %>">
+                                            </div>
+                                        </label>
+                                    </div>
+                                </div>
+                                <% }) %>
+                            </div>
+                        </div>  
+                        <div class="mb-3">
+                            <button class="btn btn-success w-100" style="height: 3rem;">Add Campground</button>
+                        </div>
+                    </form>
                 </div>
-            </div>  
-            <div class="mb-3">
-                <button class="btn btn-info">Save Changes</button>
             </div>
-        </form>
-        <a href="/campgrounds/<%= campground._id %>" required>BACK</a>
+            <a href="/campgrounds/<%= campground._id %>" required>BACK</a>
+        </div>
     </div>
 </div>
