--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,48 +1,53 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-    <h1 class="text-center">Add a Campground</h1>
-    <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
-            <div class="mb-3">
-                <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" id="title" name="campground[title]" required>
-                <div class="valid-feedback">
-                    <p>Looks good!</p>
+<div class="container d-flex justify-content-center align-items-center mt-5 mb-5">
+    <div class="row">
+        <h1 class="text-center">Add a Campground</h1>
+        <div class="col-md-6 offset-md-3">
+            <div class="card shadow">
+                <div class="card-body">
+                    <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+                        <div class="mb-3">
+                            <label class="form-label" for="title">Title</label>
+                            <input class="form-control" type="text" id="title" name="campground[title]" required>
+                            <div class="valid-feedback">
+                                <p>Looks good!</p>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="location">Location</label>
+                            <input class="form-control" type="text" id="location" name="campground[location]" required>
+                            <div class="valid-feedback">
+                                <p>Looks good!</p>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="price">Campground Price</label>
+                            <div class="input-group">
+                                <span class="input-group-text" id="price-label">$</span>
+                                <input type="text" id="price" class="form-control" placeholder="29.99" name="campground[price]" aria-label="price" aria-describedby="price-label" required>
+                                <div class="valid-feedback">
+                                    <p>Looks good!</p>
+                                </div>
+                            </div>  
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="description">Description</label>
+                            <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
+                            <div class="valid-feedback">
+                                <p>Looks good!</p>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="image" class="form-label">Upload Images</label>
+                            <input class="form-control" type="file" id="image" name="image" multiple>
+                        </div>     
+                        <div class="mb-3">
+                            <button class="btn btn-success w-100" style="height: 3rem;">Add Campground</button>
+                        </div>
+                    </form>
                 </div>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" id="location" name="campground[location]" required>
-                <div class="valid-feedback">
-                    <p>Looks good!</p>
-                </div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="price">Campground Price</label>
-                <div class="input-group">
-                    <span class="input-group-text" id="price-label">$</span>
-                    <input type="text" id="price" class="form-control" placeholder="29.99" name="campground[price]" aria-label="price" aria-describedby="price-label" required>
-                    <div class="valid-feedback">
-                        <p>Looks good!</p>
-                    </div>
-                </div>  
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
-                <div class="valid-feedback">
-                    <p>Looks good!</p>
-                </div>
-            </div>
-            <div class="mb-3">
-                <label for="image" class="form-label">Upload Images</label>
-                <input class="form-control" type="file" id="image" name="image" multiple>
-            </div>     
-            <div class="mb-3">
-                <button class="btn btn-success">Add Campground</button>
-            </div>
-        </form>
-        <a href="/campgrounds">ALL CAMPGROUNDS</a>
+            <a href="/campgrounds">ALL CAMPGROUNDS</a>
+        </div>
     </div>
 </div>
-
