--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,7 +4,6 @@
 <div class="row">
     <div class="col-6">
         <div class="card mb-3">
-            <div id='map' style='width: 400px; height: 300px;'></div>
             <div id="campgroundCarousel" class="carousel slide">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i) => { %>
@@ -51,6 +50,7 @@
         </div>
     </div>
     <div class="col-6">
+        <div id='map' class="map"></div>
         <% if (current_user) { %>
             <h2>Leave a Review!</h2>
             <form class="mb-3 validated-form" action="/campgrounds/<%= campground._id %>/reviews" method="POST" novalidate>
